--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ button:hover {
 
 <!-- 🔐 Change to false before sharing -->
 <script>
-const OWNER_MODE = true;
+const OWNER_MODE = false;
 </script>
 
 <!-- 🌌 Moving background -->
